--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>wishit-product-service</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Carshare Project</name>
+    <name>Product Service</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -45,7 +45,7 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!-- ORM repository (JPA) support -->
+        <!-- ORM product.repository (JPA) support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
