--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* ProductApp</web>
+                    </processTypes>
+                </configuration>
+            </plugin>
 
             <!-- Allows to package executable jar or war archives and run an application "in-place" -->
             <plugin>
