--- a/pom.xml
+++ b/pom.xml
@@ -128,11 +128,11 @@
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>2.0.2</version>
-                <configuration>
-                    <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* product.ProductApp</web>
-                    </processTypes>
-                </configuration>
+                <!--<configuration>-->
+                    <!--<processTypes>-->
+                        <!--<web>java $JAVA_OPTS -cp target/classes:target/dependency/* product.ProductApp</web>-->
+                    <!--</processTypes>-->
+                <!--</configuration>-->
             </plugin>
 
             <!-- Allows to package executable jar or war archives and run an application "in-place" -->
