--- a/pom.xml
+++ b/pom.xml
@@ -125,16 +125,16 @@
     <build>
         <plugins>
 
-            <plugin>
-                <groupId>com.heroku.sdk</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
-                <version>2.0.2</version>
-                <!--<configuration>-->
-                    <!--<processTypes>-->
-                        <!--<web>java $JAVA_OPTS -cp target/classes:target/dependency/* product.ProductApp</web>-->
-                    <!--</processTypes>-->
-                <!--</configuration>-->
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.heroku.sdk</groupId>-->
+                <!--<artifactId>heroku-maven-plugin</artifactId>-->
+                <!--<version>2.0.2</version>-->
+                <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<processTypes>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<web>java $JAVA_OPTS -cp target/classes:target/dependency/* product.ProductApp</web>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</processTypes>&ndash;&gt;-->
+                <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
+            <!--</plugin>-->
 
             <!-- Allows to package executable jar or war archives and run an application "in-place" -->
             <plugin>
