--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=$(JDBC_DATASOURCE_USERNAME)
 spring.datasource.password=$(JDBC_DATASOURCE_PASSWORD)
 
 # Creates the DB when the app starts, drops everything when the app closes. Good for testing.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.session.store-type=jdbc
 
